package ar.edu.utn.frba.dds.diseflix.models.entities;

import lombok.Data;

@Data
public class Imagen {
    private String path;
}
